--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -166,7 +166,7 @@ input[type=radio] {
 
 img {
   max-width: 100%;
-  height: auto; }
+  height: 80%; }
 
 figure {
   margin: 0; }
@@ -187,7 +187,7 @@ h2 {
 
 .main {
   background: #f8f8f8;
-  padding: 150px 0; }
+  padding: 80px 0; }
 
 .clear {
   clear: both; }
@@ -197,6 +197,7 @@ body {
   line-height: 1.8;
   color: #222;
   background: #f8f8f8;
+  height: auto;
   font-weight: 400;
   font-family: Poppins; }
 
@@ -497,15 +498,6 @@ label.valid {
     -webkit-transform: scale(1.3) translateZ(0);
     transform: scale(1.3) translateZ(0); }
 
-.zmdi-facebook {
-  background: #3b5998; }
-
-.zmdi-twitter {
-  background: #1da0f2; }
-
-.zmdi-google {
-  background: #e72734; }
-
 .signin-form {
   margin-right: 90px;
   margin-left: 80px; }
@@ -540,12 +532,12 @@ label.valid {
     margin-right: 0px;
     padding-left: 0px;
     /* box-sizing: border-box; */
-    padding: 0 30px; }
+    padding: 0 10px; }
 
   .signin-image {
     margin-left: 0px;
     margin-right: 0px;
-    margin-top: 50px;
+    margin-top: 20px;
     order: 2;
     -moz-order: 2;
     -webkit-order: 2;
@@ -573,7 +565,7 @@ label.valid {
     -ms-order: 1;
     margin-right: 0px;
     margin-left: 0px;
-    padding: 0 30px; }
+    padding: 0 20px; }
 
   .form-title {
     text-align: center; } }
