--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -88,3 +88,19 @@
     background: #EA7B00;
     color: #fff;
 }
+
+div#window {
+    float: left;
+    width: 50%;
+    height: 50%;
+    margin: 40px auto;
+    background:  #EA7B00;
+    -moz-background-size: 100%; /* Firefox 3.6+ */
+    -webkit-background-size: 100%; /* Safari 3.1+ и Chrome 4.0+ */
+    -o-background-size: 100%; /* Opera 9.6+ */
+    background-size: cover; /* Современные браузеры */
+    border: 1px solid #fff;
+    border-radius: 15px;
+    z-index: 150; display: none;
+    position: fixed; left: 0;right: 0;top: 10%;bottom: 0;
+}
