--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -2184,8 +2184,8 @@ body {
   height: 50px;
   display: inline-block;
   border-radius: 50px;
-  background-color: #a3d063;
-  border: 2px solid #a3d063;
+  background-color: #ffffff;
+  border: 2px solid #ffffff;
   color: #fff;
   cursor: pointer;
   transition: all 0.2s linear;
@@ -2193,7 +2193,7 @@ body {
   float: right;
 }
 .bottom_wrapper .send_message:hover {
-  color: #a3d063;
+  color: #ffffff;
   background-color: #fff;
 }
 .bottom_wrapper .send_message .text {
