--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -11,7 +11,7 @@ li {
     float: left;
 }
 
-li a {
+li {
     display: block;
     color: white;
     text-align: center;
@@ -20,6 +20,6 @@ li a {
 }
 
 /* Change the link color to #111 (black) on hover */
-li a:hover {
+li :hover {
     background-color: #00b3ee;
 }
