--- a/src/main/resources/static/css/oneStyle.css
+++ b/src/main/resources/static/css/oneStyle.css
@@ -31,7 +31,7 @@ body {
 }
 
 .form-style-2 span.required {
-    color: red;
+    color: #B6B2FF;
 }
 
 .form-style-2 .tel-number-field {
@@ -77,7 +77,7 @@ body {
 .form-style-2 input[type=button] {
     border: none;
     padding: 8px 15px 8px 15px;
-    background: #FF8500;
+    background: #B6B2FF;
     color: #fff;
     box-shadow: 1px 1px 4px #DADADA;
     -moz-box-shadow: 1px 1px 4px #DADADA;
@@ -89,6 +89,6 @@ body {
 
 .form-style-2 input[type=submit]:hover,
 .form-style-2 input[type=button]:hover {
-    background: #EA7B00;
+    background: #B6B2FF;
     color: #fff;
 }
