--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1768,18 +1768,18 @@ body.offcanvas #colorlib-main, body.offcanvas .colorlib-nav-toggle {
   outline: none !important; }
 
 .btn-primary {
-  background: #2c98f0;
+  background: #B6B2FF;
   color: #fff;
-  border: 2px solid #2c98f0; }
+  border: 2px solid #B6B2FF; }
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
-  background: #44a4f2 !important;
-  border-color: #44a4f2 !important; }
+  background: #B6B2FF !important;
+  border-color: #B6B2FF !important; }
 .btn-primary.btn-outline {
   background: transparent;
-  color: #2c98f0;
-  border: 2px solid #2c98f0; }
+  color: #B6B2FF;
+  border: 2px solid #B6B2FF; }
 .btn-primary.btn-outline:hover, .btn-primary.btn-outline:focus, .btn-primary.btn-outline:active {
-  background: #2c98f0;
+  background:#B6B2FF;
   color: #fff; }
 
 .btn-success {
