--- a/src/main/resources/static/css/chat.css
+++ b/src/main/resources/static/css/chat.css
@@ -19,12 +19,12 @@ body {
     height: 100%;
 }
 body:before {
-    height: 50%;
+    height: 100%;
     width: 100%;
     position: absolute;
     top: 0;
     left: 0;
-    background: #128ff2;
+    background: url(../images/donuts.jpg) center no-repeat;
     content: "";
     z-index: 0;
 }
@@ -57,7 +57,7 @@ h1 {
     font-size: 1.7em;
 }
 a {
-    color: #128ff2;
+    color: #B6B2FF;
 }
 button {
     box-shadow: none;
@@ -79,12 +79,12 @@ button.default {
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12);
 }
 button.primary {
-    background-color: #128ff2;
+    background-color: #B6B2FF;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12);
     color: #fff;
 }
 button.accent {
-    background-color: #ff4743;
+    background-color: #B6B2FF;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12);
     color: #fff;
 }
