--- a/src/main/resources/static/css/taskStyles.css
+++ b/src/main/resources/static/css/taskStyles.css
@@ -2,14 +2,13 @@ body {
     /*display: -ms-flexbox;*/
     /*display: flex;*/
     color: #363636;
-    background: url(fon.jpg) center no-repeat;
+    background: url(../images/donuts.jpg) center no-repeat;
     background-size: cover;
 }
 
 .background-style {
     /*background-color: #FFFFFF;*/
     /*opacity: 0.7;*/
-    background-color: rgba(255,255,255,0.7);
+    background-color: rgba(255,255,255,0.5);
 
 }
-
