--- a/src/main/resources/static/css/deskStyles.css
+++ b/src/main/resources/static/css/deskStyles.css
@@ -9,7 +9,8 @@ body {
 .background-style {
     /*background-color: #FFFFFF;*/
     /*opacity: 0.7;*/
-    background-color: rgba(255,255,255,0.7);
-
+    background-color: rgba(255, 255, 255, 0.7);
+    padding: 10px 10px 10px 10px;
+    /*margin-right: 10px;*/
 }
 
