--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -7,7 +7,7 @@
 .form-style-2-heading {
     font-weight: bold;
     font-style: italic;
-    border-bottom: 2px solid #ddd;
+    /*border-bottom: 2px solid #ddd;*/
     margin-bottom: 20px;
     font-size: 15px;
     padding-bottom: 3px;
@@ -154,20 +154,40 @@ a.disabled {
 
 .div-class {
     position: absolute;
+    margin-bottom: 20px;
     z-index: 9;
-    background-color: #f1f1f1;
+    /*background-color: #f1f1f1;*/
     text-align: center;
+    padding: 5px;
     border: 1px solid #d3d3d3;
+    background-color: rgba(255, 255, 255, 0.5);
+
 }
 
 .header {
-    padding: 10px;
+    padding: 8px;
     cursor: move;
     z-index: 10;
-    background-color: #2196F3;
+    background-color: #a790ff;
     color: #fff;
 }
 
-ul.ulStyle li {
-    display: inline-block;
+.header-task {
+    padding: 5px;
+    cursor: move;
+    z-index: 10;
+    background-color: #ffffff;
+    color: #000000;
 }
+
+ul.ulStyle li {
+    /*display: inline-list-item;*/
+    float: left;
+    margin-left: 10px;
+}
+
+.divCard {
+    float: left;
+    margin-left: 10px;
+}
+
