--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -156,12 +156,10 @@ a.disabled {
     position: absolute;
     margin-bottom: 20px;
     z-index: 9;
-    /*background-color: #f1f1f1;*/
+    background-color: #ffffff;
     text-align: center;
     padding: 5px;
     border: 1px solid #d3d3d3;
-    background-color: rgba(255, 255, 255, 0.5);
-
 }
 
 .header {
