added href to the li element

--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -30,65 +30,54 @@
                 ul1.appendChild(li);
             };
         }
+
         onDrag();
     </script>
 
 </head>
 
 <body>
-<div class="div-class" id="divMain">
+<div class="div-class droppable" id="divMain">
     <div class="header">
         HEADER
     </div>
-    <div class="droppable">
-        <ul class="list">
-            <li name="draggable" class="draggable">hi</li>
-        </ul>
-    </div>
-</div>
-
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-<div style="height: fit-content; background-color: #9fcdff;" class="div-class" id="divMain2">
-    <div class="header">Header</div>
-    <div class="droppable">
-        <ul class="list">
-            <li class="draggable" style="background: #dff0d8;">test1</li>
-            <li class="draggable" style="background: #dff0d8;">test2</li>
-            <li class="draggable" style="background: #dff0d8;">test3</li>
-        </ul>
-    </div>
-
-</div>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-<!--<p>Браузер переносить сюда:</p>
-
-<div class="droppable" style="background: #B6B2FF; width: fit-content; height: fit-content">
-    <ul id="ul">
-        <li>already here</li>
+    <ul class="list">
+        <li name="draggable" class="draggable">hi</li>
     </ul>
-</div>-->
+
+</div>
+
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<div style="height: fit-content; background-color: #9fcdff;" class="div-class droppable" id="divMain2">
+    <div class="header">Header</div>
+    <ul class="list">
+        <li class="draggable" style="background: #dff0d8;">test1</li>
+        <li class="draggable" style="background: #dff0d8;">test2</li>
+        <li class="draggable" style="background: #dff0d8;">test3</li>
+    </ul>
+</div>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
 
 <script>
