--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -79,6 +79,7 @@
 <br>
 <br>
 
+<img class="img-fluid rounded" src="/static/images/default.png" alt="">
 
 <script>
     //Make the DIV element draggable:
@@ -140,6 +141,6 @@
         }
     }
 </script>
-</body>
 
+</body>
 </html>
