--- a/src/main/resources/static/css/bootstrap.css
+++ b/src/main/resources/static/css/bootstrap.css
@@ -6241,7 +6241,8 @@ button.bg-dark:focus {
 }
 
 .rounded {
-  border-radius: 0.25rem !important;
+  /*border-radius: 0.25rem !important;*/
+  transform: rotate(180deg);
 }
 
 .rounded-top {
