--- a/src/main/resources/static/css/taskStyles.css
+++ b/src/main/resources/static/css/taskStyles.css
@@ -9,3 +9,9 @@ body {
 .background-style {
     background-color: rgba(255,255,255,0.7);
 }
+
+.task-pic{
+    transform: rotate(90deg);
+    width: 40%;
+    height: 30%;
+}
